--- a/detail.html
+++ b/detail.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detail Alat | Virtu DigiLab</title>
+
   <link rel="stylesheet" href="style.css">
+
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     h1 { margin-bottom: 20px; }
     h2 { margin-top: 30px; }
     table { width: 100%; border-collapse: collapse; margin-top: 10px; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background: #f2f2f2; }
+    th { background: #f2f2f2; width: 220px; }
     .notfound { color: red; font-weight: bold; }
     .qr-cell { text-align: center; padding: 15px; }
   </style>
@@ -29,39 +31,55 @@
   <h2>Log Calibration</h2>
   <div id="log-calibration">Memuat...</div>
 
-  <!-- QR Code Styling Library -->
+  <!-- QR Code Library -->
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const serial = urlParams.get('serial');
 
+    /* ========================== GOOGLE SHEETS ========================== */
     const NRC_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
+
     const LOG_M_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1651659513&single=true&output=csv";
+
     const LOG_C_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
-    /* CSV → JSON converter */
+    /* ========================== CSV PARSER KUAT ========================== */
     function csvToJson(csvText) {
       const rows = [];
       let current = "", row = [], insideQuote = false;
 
       for (let char of csvText) {
-        if (char === '"') insideQuote = !insideQuote;
-        else if (char === "," && !insideQuote) { row.push(current.trim()); current = ""; }
-        else if (char === "\n" && !insideQuote) { row.push(current.trim()); rows.push(row); row = []; current = ""; }
-        else current += char;
+        if (char === '"') {
+          insideQuote = !insideQuote;
+        } else if (char === "," && !insideQuote) {
+          row.push(current.trim());
+          current = "";
+        } else if (char === "\n" && !insideQuote) {
+          row.push(current.trim());
+          rows.push(row);
+          row = [];
+          current = "";
+        } else {
+          current += char;
+        }
       }
+
       if (current) row.push(current.trim());
       if (row.length) rows.push(row);
 
       const headers = rows[0];
       const json = [];
+
       for (let i = 1; i < rows.length; i++) {
         const obj = {};
-        headers.forEach((h, j) => obj[h.trim()] = rows[i][j] || "");
+        headers.forEach((h, j) => {
+          obj[h.trim()] = rows[i][j] ? rows[i][j].trim() : "";
+        });
         json.push(obj);
       }
       return json;
@@ -77,13 +95,7 @@
       return Object.keys(obj).find(k => k.toLowerCase().includes("serial")) || null;
     }
 
-    function renderDocumentCell(url) {
-      if (!url || url.trim() === "") return "-";
-      if (url.includes("drive.google.com"))
-        return `<a href="${url}" target="_blank">Lampiran File</a>`;
-      return url;
-    }
-
+    /* ========================== HALAMAN DETAIL ========================== */
     async function loadData() {
       const nrc  = await loadCSV(NRC_URL);
       const logM = await loadCSV(LOG_M_URL);
@@ -93,108 +105,104 @@
       const serialColM   = findSerialColumn(logM[0]);
       const serialColC   = findSerialColumn(logC[0]);
 
-      const cleanNRC = nrc.filter(r => r[serialColNRC] && r[serialColNRC].trim() !== "");
-      const cleanM   = logM.filter(r => r[serialColM]   && r[serialColM].trim() !== "");
-      const cleanC   = logC.filter(r => r[serialColC]   && r[serialColC].trim() !== "");
+      const cleanNRC = nrc.filter(r => r[serialColNRC]);
+      const cleanM   = logM.filter(r => r[serialColM]);
+      const cleanC   = logC.filter(r => r[serialColC]);
 
       /* ========================== DETAIL ALAT ========================== */
-      const data = cleanNRC.find(r => r[serialColNRC] === serial);
+      const item = cleanNRC.find(r => r[serialColNRC] === serial);
       const container = document.getElementById("data-container");
 
-      if (!data) {
+      if (!item) {
         container.innerHTML = `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
-      } else {
-        let html = "<table>";
+        return;
+      }
 
-        const keys = Object.keys(data);
-        let qrInserted = false;
+      let html = "<table>";
+      let qrInserted = false;
 
-        keys.forEach(k => {
-          html += `<tr><th>${k}</th><td>${data[k]}</td></tr>`;
+      Object.keys(item).forEach(key => {
+        html += `<tr><th>${key}</th><td>${item[key]}</td></tr>`;
 
-          /* Insert QR Code AFTER Place Type */
-          if (!qrInserted && k.toLowerCase().includes("place type")) {
-            html += `
-              <tr>
-                <th>QR Code</th>
-                <td class="qr-cell" id="qr-code-cell"></td>
-              </tr>
-            `;
-            qrInserted = true;
-          }
-        });
-
-        html += "</table>";
-        container.innerHTML = html;
-
-        /* Generate QR Code */
-        const qrCell = document.getElementById("qr-code-cell");
-        if (qrCell) {
-          const qr = new QRCodeStyling({
-            width: 160,
-            height: 160,
-            data: serial,
-            dotsOptions: { color: "#000", type: "rounded" },
-            backgroundOptions: { color: "#ffffff" }
-          });
-          qr.append(qrCell);
+        // Insert QR Code immediately after Place Type
+        if (!qrInserted && key.toLowerCase().includes("place type")) {
+          html += `
+            <tr>
+              <th>QR Code</th>
+              <td class="qr-cell" id="qr-code-cell"></td>
+            </tr>
+          `;
+          qrInserted = true;
         }
+      });
+
+      html += "</table>";
+      container.innerHTML = html;
+
+      const qrCell = document.getElementById("qr-code-cell");
+      if (qrCell) {
+        const qr = new QRCodeStyling({
+          width: 160,
+          height: 160,
+          data: window.location.href,
+          dotsOptions: { color: "#000", type: "rounded" },
+          backgroundOptions: { color: "#fff" }
+        });
+        qr.append(qrCell);
       }
 
       /* ========================== LOG MAINTENANCE ========================== */
-      const filteredM = cleanM.filter(r => r[serialColM] === serial);
+      const Mdata = cleanM.filter(r => r[serialColM] === serial);
       const logMContainer = document.getElementById("log-maintenance");
 
-      if (filteredM.length === 0) logMContainer.innerHTML = "Tidak ada data.";
-      else {
-        let html = "<table><tr>";
-        Object.keys(filteredM[0]).forEach(k => html += `<th>${k}</th>`);
-        html += "</tr>";
+      if (Mdata.length === 0) {
+        logMContainer.innerHTML = "Tidak ada data.";
+      } else {
+        let htmlM = "<table><tr>";
+        Object.keys(Mdata[0]).forEach(k => htmlM += `<th>${k}</th>`);
+        htmlM += "</tr>";
 
-        filteredM.forEach(r => {
-          html += "<tr>";
-          Object.keys(r).forEach(k => {
-            let val = r[k];
+        Mdata.forEach(row => {
+          htmlM += "<tr>";
+          Object.keys(row).forEach(k => {
+            let cell = row[k];
 
-            /* Hapus kolom Dokumen Sertifikat */
-            if (k.toLowerCase().includes("sertifikat")) val = "-";
+            if (k.toLowerCase().includes("sertifikat")) cell = "-";
 
-            if (k.toLowerCase().includes("document")) val = renderDocumentCell(val);
-            html += `<td>${val}</td>`;
+            htmlM += `<td>${cell}</td>`;
           });
-          html += "</tr>";
+          htmlM += "</tr>";
         });
 
-        html += "</table>";
-        logMContainer.innerHTML = html;
+        htmlM += "</table>";
+        logMContainer.innerHTML = htmlM;
       }
 
       /* ========================== LOG CALIBRATION ========================== */
-      const filteredC = cleanC.filter(r => r[serialColC] === serial);
+      const Cdata = cleanC.filter(r => r[serialColC] === serial);
       const logCContainer = document.getElementById("log-calibration");
 
-      if (filteredC.length === 0) logCContainer.innerHTML = "Tidak ada data.";
-      else {
-        let html = "<table><tr>";
-        Object.keys(filteredC[0]).forEach(k => html += `<th>${k}</th>`);
-        html += "</tr>";
+      if (Cdata.length === 0) {
+        logCContainer.innerHTML = "Tidak ada data.";
+      } else {
+        let htmlC = "<table><tr>";
+        Object.keys(Cdata[0]).forEach(k => htmlC += `<th>${k}</th>`);
+        htmlC += "</tr>";
 
-        filteredC.forEach(r => {
-          html += "<tr>";
-          Object.keys(r).forEach(k => {
-            let val = r[k];
+        Cdata.forEach(row => {
+          htmlC += "<tr>";
+          Object.keys(row).forEach(k => {
+            let cell = row[k];
 
-            /* Hapus kolom Dokumen Sertifikat */
-            if (k.toLowerCase().includes("sertifikat")) val = "-";
+            if (k.toLowerCase().includes("sertifikat")) cell = "-";
 
-            if (k.toLowerCase().includes("document")) val = renderDocumentCell(val);
-            html += `<td>${val}</td>`;
+            htmlC += `<td>${cell}</td>`;
           });
-          html += "</tr>";
+          htmlC += "</tr>";
         });
 
-        html += "</table>";
-        logCContainer.innerHTML = html;
+        htmlC += "</table>";
+        logCContainer.innerHTML = htmlC;
       }
     }
 
