--- a/detail.html
+++ b/detail.html
@@ -166,7 +166,7 @@
 
             if (k.toLowerCase().includes("document")) {
               if (cell.startsWith("http")) {
-                cell = `<a href="${cell}" target="_blank">Buka File</a>`;
+                cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
               }
             }
 
@@ -201,7 +201,7 @@
 
             if (k.toLowerCase().includes("document")) {
               if (cell.startsWith("http")) {
-                cell = `<a href="${cell}" target="_blank">Buka File</a>`;
+                cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
               }
             }
 
