--- a/detail.html
+++ b/detail.html
@@ -36,7 +36,7 @@
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const serial = urlParams.get('serial');
+    const serial = urlParams.get("serial");
 
     const NRC_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
@@ -48,41 +48,41 @@
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
 
-    /* ======================= CSV PARSER ======================= */
-    function csvToJson(csvText) {
-      const rows = [];
-      let current = "", row = [], insideQuote = false;
+    /* ========= CSV PARSER AMAN (Tidak error kolom kosong) ========= */
+    function csvToJson(csv) {
+      const lines = csv.split(/\r?\n/).filter(l => l.trim() !== "");
+      const headers = lines[0].split(",").map(h => h.trim());
+      const out = [];
 
-      for (let char of csvText) {
-        if (char === '"') insideQuote = !insideQuote;
-        else if (char === "," && !insideQuote) { row.push(current.trim()); current = ""; }
-        else if (char === "\n" && !insideQuote) { row.push(current.trim()); rows.push(row); row = []; current = ""; }
-        else current += char;
-      }
-
-      if (current) row.push(current.trim());
-      if (row.length) rows.push(row);
-
-      const headers = rows[0];
-      const json = [];
-
-      for (let i = 1; i < rows.length; i++) {
+      for (let i = 1; i < lines.length; i++) {
+        const cols = lines[i].split(",");
         const obj = {};
-        headers.forEach((h, j) => obj[h.trim()] = rows[i][j] ? rows[i][j].trim() : "");
-        json.push(obj);
+
+        headers.forEach((h, j) => {
+          obj[h] = cols[j] ? cols[j].trim() : "";
+        });
+
+        out.push(obj);
       }
 
-      return json;
+      return out;
     }
 
     async function loadCSV(url) {
-      const res = await fetch(url);
-      const txt = await res.text();
-      return csvToJson(txt);
+      try {
+        const res = await fetch(url);
+        const txt = await res.text();
+        return csvToJson(txt);
+      } catch (err) {
+        console.error("Gagal fetch CSV:", err);
+        return [];
+      }
     }
 
     function findSerialColumn(obj) {
-      return Object.keys(obj).find(k => k.toLowerCase().includes("serial")) || null;
+      return Object.keys(obj).find(k =>
+        k.toLowerCase().includes("serial")
+      ) || null;
     }
 
 
@@ -92,21 +92,22 @@
       const logM = await loadCSV(LOG_M_URL);
       const logC = await loadCSV(LOG_C_URL);
 
+      if (nrc.length === 0) {
+        document.getElementById("data-container").innerHTML =
+          "<p class='notfound'>Gagal memuat data dari server.</p>";
+        return;
+      }
+
       const serialColNRC = findSerialColumn(nrc[0]);
-      const serialColM   = findSerialColumn(logM[0]);
-      const serialColC   = findSerialColumn(logC[0]);
+      const serialColM   = logM[0] ? findSerialColumn(logM[0]) : null;
+      const serialColC   = logC[0] ? findSerialColumn(logC[0]) : null;
 
-      const cleanNRC = nrc.filter(r => r[serialColNRC]);
-      const cleanM   = logM.filter(r => r[serialColM]);
-      const cleanC   = logC.filter(r => r[serialColC]);
-
-
-      /* ======================= DETAIL ALAT ======================= */
-      const item = cleanNRC.find(r => r[serialColNRC] === serial);
+      const item = nrc.find(r => r[serialColNRC] === serial);
       const container = document.getElementById("data-container");
 
       if (!item) {
-        container.innerHTML = `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
+        container.innerHTML =
+          `<p class="notfound">Data tidak ditemukan untuk Serial: ${serial}</p>`;
         return;
       }
 
@@ -116,6 +117,7 @@
       Object.keys(item).forEach(key => {
         html += `<tr><th>${key}</th><td>${item[key]}</td></tr>`;
 
+        /* Sisipkan QR setelah kolom "Place Type" */
         if (!qrInserted && key.toLowerCase().includes("place type")) {
           html += `
             <tr>
@@ -131,22 +133,26 @@
       container.innerHTML = html;
 
 
-      /* ======================= QR CODE ======================= */
+      /* ======================= QR CODE DETAIL ======================= */
       const qrCell = document.getElementById("qr-code-cell");
       if (qrCell) {
         const qr = new QRCodeStyling({
-          width: 160,
-          height: 160,
-          data: window.location.href,
-          dotsOptions: { color: "#000", type: "rounded" },
+          width: 180,
+          height: 180,
+          data: serial,
+          dotsOptions: { type: "rounded" },
           backgroundOptions: { color: "#fff" }
         });
+
         qr.append(qrCell);
       }
 
 
       /* ======================= LOG MAINTENANCE ======================= */
-      const Mdata = cleanM.filter(r => r[serialColM] === serial);
+      const Mdata = (serialColM && logM.length)
+        ? logM.filter(r => r[serialColM] === serial)
+        : [];
+
       const logMContainer = document.getElementById("log-maintenance");
 
       if (Mdata.length === 0) {
@@ -154,8 +160,7 @@
       } else {
         let htmlM = "<table><tr>";
         Object.keys(Mdata[0]).forEach(k => {
-          if (k.toLowerCase().includes("document")) htmlM += `<th>Document</th>`;
-          else htmlM += `<th>${k}</th>`;
+          htmlM += `<th>${k}</th>`;
         });
         htmlM += "</tr>";
 
@@ -164,10 +169,8 @@
           Object.keys(row).forEach(k => {
             let cell = row[k];
 
-            if (k.toLowerCase().includes("document")) {
-              if (cell.startsWith("http")) {
-                cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
-              }
+            if (k.toLowerCase().includes("document") && cell.startsWith("http")) {
+              cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
             }
 
             htmlM += `<td>${cell}</td>`;
@@ -181,7 +184,10 @@
 
 
       /* ======================= LOG CALIBRATION ======================= */
-      const Cdata = cleanC.filter(r => r[serialColC] === serial);
+      const Cdata = (serialColC && logC.length)
+        ? logC.filter(r => r[serialColC] === serial)
+        : [];
+
       const logCContainer = document.getElementById("log-calibration");
 
       if (Cdata.length === 0) {
@@ -189,8 +195,7 @@
       } else {
         let htmlC = "<table><tr>";
         Object.keys(Cdata[0]).forEach(k => {
-          if (k.toLowerCase().includes("document")) htmlC += `<th>Document</th>`;
-          else htmlC += `<th>${k}</th>`;
+          htmlC += `<th>${k}</th>`;
         });
         htmlC += "</tr>";
 
@@ -199,21 +204,18 @@
           Object.keys(row).forEach(k => {
             let cell = row[k];
 
-            if (k.toLowerCase().includes("document")) {
-              if (cell.startsWith("http")) {
-                cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
-              }
+            if (k.toLowerCase().includes("document") && cell.startsWith("http")) {
+              cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
             }
 
             htmlC += `<td>${cell}</td>`;
           });
-          htmlC += "</tr>";
+          htmlC += "</tr>`;
         });
 
         htmlC += "</table>";
         logCContainer.innerHTML = htmlC;
       }
-
     }
 
     loadData();
