--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
     &copy; 2025 Virtu DigiLab — Sistem Inventori Alat Laboratorium
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
+  <!-- QRCode library -->
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 
+  <!-- script kamu -->
   <script src="script.js"></script>
+
 
 </body>
 </html>
