--- a/detail.html
+++ b/detail.html
@@ -210,7 +210,7 @@
 
             htmlC += `<td>${cell}</td>`;
           });
-          htmlC += "</tr>`;
+          htmlC += "</tr>";
         });
 
         htmlC += "</table>";
