--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,7 @@
   <div id="log-calibration">Memuat...</div>
 
   <!-- QR Code Library -->
-  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
