--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </footer>
 
   <!-- QRCode library -->
-  <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 
   <!-- script kamu -->
   <script src="script.js"></script>
