--- a/detail.html
+++ b/detail.html
@@ -31,12 +31,14 @@
   <h2>Log Calibration</h2>
   <div id="log-calibration">Memuat...</div>
 
-  <!-- QR Code Library -->
-  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+  <!-- QR Code Styling Library -->
+  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const serial = urlParams.get("serial");
+
+    const DETAIL_LINK = `https://virtudigilab-equipment.vercel.app/detail.html?serial=${serial}`;
 
     const NRC_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
@@ -47,8 +49,6 @@
     const LOG_C_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
-
-    /* ========= CSV PARSER AMAN (Tidak error kolom kosong) ========= */
     function csvToJson(csv) {
       const lines = csv.split(/\r?\n/).filter(l => l.trim() !== "");
       const headers = lines[0].split(",").map(h => h.trim());
@@ -57,14 +57,11 @@
       for (let i = 1; i < lines.length; i++) {
         const cols = lines[i].split(",");
         const obj = {};
-
         headers.forEach((h, j) => {
           obj[h] = cols[j] ? cols[j].trim() : "";
         });
-
         out.push(obj);
       }
-
       return out;
     }
 
@@ -73,8 +70,7 @@
         const res = await fetch(url);
         const txt = await res.text();
         return csvToJson(txt);
-      } catch (err) {
-        console.error("Gagal fetch CSV:", err);
+      } catch {
         return [];
       }
     }
@@ -85,24 +81,20 @@
       ) || null;
     }
 
-
-    /* ======================= LOAD DATA ======================= */
     async function loadData() {
       const nrc  = await loadCSV(NRC_URL);
       const logM = await loadCSV(LOG_M_URL);
       const logC = await loadCSV(LOG_C_URL);
 
-      if (nrc.length === 0) {
+      if (!nrc.length) {
         document.getElementById("data-container").innerHTML =
-          "<p class='notfound'>Gagal memuat data dari server.</p>";
+          "<p class='notfound'>Gagal memuat data.</p>";
         return;
       }
 
       const serialColNRC = findSerialColumn(nrc[0]);
-      const serialColM   = logM[0] ? findSerialColumn(logM[0]) : null;
-      const serialColC   = logC[0] ? findSerialColumn(logC[0]) : null;
-
       const item = nrc.find(r => r[serialColNRC] === serial);
+
       const container = document.getElementById("data-container");
 
       if (!item) {
@@ -117,7 +109,6 @@
       Object.keys(item).forEach(key => {
         html += `<tr><th>${key}</th><td>${item[key]}</td></tr>`;
 
-        /* Sisipkan QR setelah kolom "Place Type" */
         if (!qrInserted && key.toLowerCase().includes("place type")) {
           html += `
             <tr>
@@ -132,89 +123,69 @@
       html += "</table>";
       container.innerHTML = html;
 
-
-      /* ======================= QR CODE DETAIL ======================= */
+      /** === QR CODE === */
       const qrCell = document.getElementById("qr-code-cell");
       if (qrCell) {
         const qr = new QRCodeStyling({
           width: 180,
           height: 180,
-          data: serial,
+          data: DETAIL_LINK,
           dotsOptions: { type: "rounded" },
-          backgroundOptions: { color: "#fff" }
+          backgroundOptions: { color: "#ffffff" }
         });
-
         qr.append(qrCell);
       }
 
+      /** === LOG MAINTENANCE === */
+      const serialColM = logM[0] ? findSerialColumn(logM[0]) : null;
+      const Mdata = logM.filter(r => r[serialColM] === serial);
+      const LM = document.getElementById("log-maintenance");
 
-      /* ======================= LOG MAINTENANCE ======================= */
-      const Mdata = (serialColM && logM.length)
-        ? logM.filter(r => r[serialColM] === serial)
-        : [];
+      if (!Mdata.length) LM.innerHTML = "Tidak ada data.";
+      else {
+        let t = "<table><tr>";
+        Object.keys(Mdata[0]).forEach(k => t += `<th>${k}</th>`);
+        t += "</tr>";
 
-      const logMContainer = document.getElementById("log-maintenance");
-
-      if (Mdata.length === 0) {
-        logMContainer.innerHTML = "Tidak ada data.";
-      } else {
-        let htmlM = "<table><tr>";
-        Object.keys(Mdata[0]).forEach(k => {
-          htmlM += `<th>${k}</th>`;
-        });
-        htmlM += "</tr>";
-
-        Mdata.forEach(row => {
-          htmlM += "<tr>";
-          Object.keys(row).forEach(k => {
-            let cell = row[k];
-
-            if (k.toLowerCase().includes("document") && cell.startsWith("http")) {
-              cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
-            }
-
-            htmlM += `<td>${cell}</td>`;
+        Mdata.forEach(r => {
+          t += "<tr>";
+          Object.keys(r).forEach(k => {
+            let val = r[k];
+            if (k.toLowerCase().includes("document") && val.startsWith("http"))
+              val = `<a href="${val}" target="_blank">Lampiran File</a>`;
+            t += `<td>${val}</td>`;
           });
-          htmlM += "</tr>";
+          t += "</tr>";
         });
 
-        htmlM += "</table>";
-        logMContainer.innerHTML = htmlM;
+        t += "</table>";
+        LM.innerHTML = t;
       }
 
+      /** === LOG CALIBRATION === */
+      const serialColC = logC[0] ? findSerialColumn(logC[0]) : null;
+      const Cdata = logC.filter(r => r[serialColC] === serial);
+      const LC = document.getElementById("log-calibration");
 
-      /* ======================= LOG CALIBRATION ======================= */
-      const Cdata = (serialColC && logC.length)
-        ? logC.filter(r => r[serialColC] === serial)
-        : [];
+      if (!Cdata.length) LC.innerHTML = "Tidak ada data.";
+      else {
+        let t = "<table><tr>";
+        Object.keys(Cdata[0]).forEach(k => t += `<th>${k}</th>`);
+        t += "</tr>";
 
-      const logCContainer = document.getElementById("log-calibration");
-
-      if (Cdata.length === 0) {
-        logCContainer.innerHTML = "Tidak ada data.";
-      } else {
-        let htmlC = "<table><tr>";
-        Object.keys(Cdata[0]).forEach(k => {
-          htmlC += `<th>${k}</th>`;
-        });
-        htmlC += "</tr>";
-
-        Cdata.forEach(row => {
-          htmlC += "<tr>";
-          Object.keys(row).forEach(k => {
-            let cell = row[k];
-
-            if (k.toLowerCase().includes("document") && cell.startsWith("http")) {
-              cell = `<a href="${cell}" target="_blank">Lampiran File</a>`;
-            }
-
-            htmlC += `<td>${cell}</td>`;
+        Cdata.forEach(r => {
+          t += "<tr>";
+          Object.keys(r).forEach(k => {
+            let val = r[k];
+            if (k.toLowerCase().includes("document") && val.startsWith("http"))
+              val = `<a href="${val}" target="_blank">Lampiran File</a>`;
+            t += `<td>${val}</td>`;
           });
-          htmlC += "</tr>";
+          t += "</tr>";
         });
 
-        htmlC += "</table>";
-        logCContainer.innerHTML = htmlC;
+        t += "</table>";
+        LC.innerHTML = t;
       }
     }
 
