--- a/detail.html
+++ b/detail.html
@@ -38,8 +38,11 @@
     const urlParams = new URLSearchParams(window.location.search);
     const serial = urlParams.get("serial");
 
-    const DETAIL_LINK = `https://virtudigilab-equipment.vercel.app/detail.html?serial=${serial}`;
+    /* === LINK DETAIL FIX, WAJIB === */
+    const DETAIL_LINK =
+      `https://nurfaputra22.github.io/virtudigilab_equipment_web/detail.html?serial=${serial}`;
 
+    /* === URL CSV === */
     const NRC_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?output=csv";
 
@@ -49,6 +52,7 @@
     const LOG_C_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXfYx0A9EbttwdEODklcJe0pY3TGftGwwiqvqQswVczPXNPG3CS3Am7dYNXQVa_XSoJX3Pnd_B3AQI/pub?gid=1319359661&single=true&output=csv";
 
+    /* === CSV TO JSON === */
     function csvToJson(csv) {
       const lines = csv.split(/\r?\n/).filter(l => l.trim() !== "");
       const headers = lines[0].split(",").map(h => h.trim());
@@ -81,6 +85,7 @@
       ) || null;
     }
 
+    /* === LOAD DATA === */
     async function loadData() {
       const nrc  = await loadCSV(NRC_URL);
       const logM = await loadCSV(LOG_M_URL);
@@ -103,6 +108,7 @@
         return;
       }
 
+      /* === TABEL DETAIL ALAT === */
       let html = "<table>";
       let qrInserted = false;
 
@@ -123,7 +129,7 @@
       html += "</table>";
       container.innerHTML = html;
 
-      /** === QR CODE === */
+      /* === QR CODE === */
       const qrCell = document.getElementById("qr-code-cell");
       if (qrCell) {
         const qr = new QRCodeStyling({
@@ -136,7 +142,7 @@
         qr.append(qrCell);
       }
 
-      /** === LOG MAINTENANCE === */
+      /* === LOG MAINTENANCE === */
       const serialColM = logM[0] ? findSerialColumn(logM[0]) : null;
       const Mdata = logM.filter(r => r[serialColM] === serial);
       const LM = document.getElementById("log-maintenance");
@@ -162,7 +168,7 @@
         LM.innerHTML = t;
       }
 
-      /** === LOG CALIBRATION === */
+      /* === LOG CALIBRATION === */
       const serialColC = logC[0] ? findSerialColumn(logC[0]) : null;
       const Cdata = logC.filter(r => r[serialColC] === serial);
       const LC = document.getElementById("log-calibration");
