--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     &copy; 2025 Virtu DigiLab — Sistem Inventori Alat Laboratorium
   </footer>
 
-  <!-- Library QRCodeStyling (SAMA PERSIS dengan detail.html) -->
-  <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
+  <!-- Library QR Code yg benar untuk daftar utama -->
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 
   <!-- Script utama -->
   <script src="script.js"></script>
